pods/elasticsearch.yaml
apiVersion: v1
kind: Pod
metadata:
  name: elasticsearch
  labels:
    app: elasticsearch
spec:
  containers:
  - name: elasticsearch
    image: docker.elastic.co/elasticsearch/elasticsearch:8.0.0
    ports:
      - containerPort: 9200  # Elasticsearch REST API
      - containerPort: 9300  # Elasticsearch transport service

---

apiVersion: v1
kind: Service
metadata:
  name: elasticsearch-service
spec:
  type: NodePort
  selector:
    app: elasticsearch
  ports:
    - name: http
      protocol: TCP
      port: 9200
      targetPort: 9200
      nodePort: 31200
    - name: transport
      protocol: TCP
      port: 9300
      targetPort: 9300
      nodePort: 31300
