pods/kibana.yaml
apiVersion: v1
kind: Pod
metadata:
  name: kibana
  labels:
    app: kibana
spec:
  containers:
  - name: kibana
    image: docker.elastic.co/kibana/kibana:8.0.0
    ports:
      - containerPort: 5601  # Kibana default port

---

apiVersion: v1
kind: Service
metadata:
  name: kibana-service
spec:
  type: NodePort
  selector:
    app: kibana
  ports:
    - name: kibana
      protocol: TCP
      port: 5601
      targetPort: 5601
      nodePort: 31501
