pods/nginx_fan_website.yaml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-php
  labels:
    app: nginx-php
spec:
  dnsPolicy: ClusterFirst
  dnsConfig:
    nameservers:
      - 8.8.8.8  # Google's public DNS
  containers:
    - name: nginx-php
      image: php:7.4-apache
      ports:
        - containerPort: 80
      volumeMounts:
        - mountPath: /var/www/html
          name: website-code
      command: ["/bin/bash", "-c"]
      args:
        - |
          apt-get update && \
          apt-get install -y libpq-dev && \
          docker-php-ext-install pdo_pgsql && \
          apache2-foreground
  volumes:
    - name: website-code
      hostPath:
        path: /home/sherlock/Kubernetes_learning_hardcore/pods_websites/nginx_test_view

---

apiVersion: v1
kind: Service
metadata:
  name: nginx-php-service
spec:
  type: NodePort
  selector:
    app: nginx-php
  ports:
    - port: 80
      targetPort: 80
      nodePort: 30081
