pods/postgresql.yaml
apiVersion: v1
kind: Pod
metadata:
  name: postgresql
  labels:
    app: postgresql
spec:
  containers:
  - name: postgresql
    image: postgres:13
    ports:
      - containerPort: 5432  # PostgreSQL default port

---

apiVersion: v1
kind: Service
metadata:
  name: postgresql-service
spec:
  type: NodePort
  selector:
    app: postgresql
  ports:
    - name: postgresql
      protocol: TCP
      port: 5432
      targetPort: 5432
      nodePort: 31432
