pods/prometheus.yaml
apiVersion: v1
kind: Pod
metadata:
  name: prometheus
  labels:
    app: prometheus
spec:
  containers:
  - name: prometheus
    image: prom/prometheus:latest
    ports:
      - containerPort: 9090  # Prometheus default port

---

apiVersion: v1
kind: Service
metadata:
  name: prometheus-service
spec:
  type: NodePort
  selector:
    app: prometheus
  ports:
    - name: prometheus
      protocol: TCP
      port: 9090
      targetPort: 9090
      nodePort: 31090
