pods/rabbitmq.yaml
apiVersion: v1
kind: Pod
metadata:
  name: rabbitmq
  labels:
    app: rabbitmq
spec:
  containers:
  - name: rabbitmq
    image: rabbitmq:3-management
    ports:
      - containerPort: 5672  # RabbitMQ default port
      - containerPort: 15672 # RabbitMQ Management UI port
---

apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-service
spec:
  type: NodePort
  selector:
    app: rabbitmq
  ports:
    - name: rabbitmq
      protocol: TCP
      port: 5672
      targetPort: 5672
      nodePort: 30672
    - name: rabbitmq-management
      protocol: TCP
      port: 15672
      targetPort: 15672
      nodePort: 31672
