pods/traefik.yaml
# traefik.yaml
apiVersion: v1
kind: Pod
metadata:
  name: traefik
  labels:
    app: traefik
spec:
  serviceAccountName: traefik-ingress-controller  # Assign ServiceAccount to Traefik
  containers:
  - name: traefik
    image: traefik:v2.5
    args:
      - "--log.level=DEBUG"                        # Enable detailed logging
      - "--entrypoints.web.address=:80"            # HTTP entrypoint
      - "--entrypoints.websecure.address=:443"     # HTTPS entrypoint
      - "--providers.kubernetesIngress=true"       # Enable Kubernetes Ingress support
      - "--api.insecure=true"
    ports:
      - containerPort: 80                          # HTTP
      - containerPort: 443                         # HTTPS
      - containerPort: 8080                        # Traefik dashboard

---
apiVersion: v1
kind: Service
metadata:
  name: traefik-service
spec:
  type: NodePort
  selector:
    app: traefik
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 32080
    - name: https
      protocol: TCP
      port: 443
      targetPort: 443
      nodePort: 30443
    - name: dashboard
      protocol: TCP
      port: 8080
      targetPort: 8080
      nodePort: 31080
